some design changes (starting login/register)

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -25,12 +25,13 @@
         <div class="dw-top">
             <div class="dw-account">
                 <div class="dw-userimg">
-                    <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">
+                    <i class="bi bi-person-square"></i>
+                    <!--<img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">-->
                 </div>
                 <!--<i class="bi bi-person-bounding-box dw-userimg"></i>-->
-                <span class="dw-username">MrBombastic</span>
-                <span class="dw-acc-info">Points: 152254</span>
-                <span class="dw-acc-info">Avg rate: 8.4/10</span>
+                <span class="dw-username">No User</span>
+                <span class="dw-acc-info">--</span>
+                <span class="dw-acc-info">---</span>
             </div>
             <div class="dw-close">
                 <i class="bi bi-x-lg"></i>
@@ -41,16 +42,16 @@
         </div>
         <div class="dw-list">
             <ul>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Login</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person-plus"></i></div>Register</a></li>
+                <!--<li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-journals"></i></div>Library</a></li>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-currency-dollar"></i></div>Donate</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
-                <li><a href="#"><div class="dw-icon-cont"></div>News</a></li>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-clock-history"></i></div>History</a></li>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-box-arrow-left"></i></div>Logout</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-cart"></i></div>Shop</a></li>-->
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings</a></li>
             </ul>
         </div>
-        <a href="#" class="dw-settings"><div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings</a>
+        <!--<a href="#" class="dw-settings"><div class="dw-icon-cont"><i class="bi bi-box-arrow-left"></i></div>Logout</a>-->
     </div>
     <header>
         <div class="container-fluid header-wrap">
@@ -75,20 +76,23 @@
                 </div>
                 <div class="account-cont">
                     <div class="ppic-wrap">
-                        <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">
+                        <i class="bi bi-person-square"></i>
+                        <!--<img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">-->
                     </div>
                     <div class="dropdown_icon-wrap">
                         <i class="bi bi-caret-down-fill"></i>
                     </div>
                     <div class="account-dropdown">
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Anasaasyfa</a></li>
-                            <li><a href="#">Anayfa</a></li>
-                            <li><a href="#">Anasaffyfa</a></li>
-                            <li><a href="#">Anasafffa</a></li>
+                            <li><a href="#">Login</a></li>
+                            <li><a href="#">Register</a></li>
+                            <!--<li><a href="#">Profile</a></li>
+                            <li><a href="#">Library</a></li>
+                            <li><a href="#">Friends</a></li>
+                            <li><a href="#">Shop</a></li>-->
+                            <li><a href="#">Settings</a></li>
                         </ul>
-                        <a href="#" class="acc_dd_settings">Logout</a>
+                        <!--<a href="#" class="acc_dd_settings">Logout</a>-->
                     </div>
                 </div>
             </div>
