--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -124,6 +124,9 @@ header{
                     height: 4rem;
                     border-radius: 6px;
                 }
+                i{
+                    font-size: 4rem;
+                }
             }
             .dw-username{
                 font-family: 'Doppio One', sans-serif;
@@ -150,6 +153,7 @@ header{
     }
     .dw-list{
         padding: 10px 0 16px;
+        flex-grow: 1;
         > ul{
             > li {
                 > a{
@@ -270,9 +274,12 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0 16px 0 30px;
+    margin: 0 16px 0 30px;
     position: relative;
     .ppic-wrap{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 50px;
         height: 50px;
         border-radius: 6px;
@@ -281,6 +288,10 @@ header{
         img{
             width: 100%;
             height: 100%;
+        }
+        i{
+            color: var(--shortcuticons-color);
+            font-size: 2.3rem;
         }
     }
     .dropdown_icon-wrap{
