--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -25,7 +25,7 @@ a{
 }
 
 //Background clickable shadows
-.body-outside{
+.click-outside{
     display: none;
     width: 100%;
     height: 100%;
@@ -47,6 +47,7 @@ a{
 /*-----------DESIGN-------------*/
 body{
     background-color: var(--background-color1);
+    color: var(--text-color1);
 }
 .main-cont{
     min-height: 100%;
@@ -96,10 +97,10 @@ header{
     font-family: 'Itim', cursive;
     overflow-x: hidden;
     transition: width 0.3s ease;
+    color: var(--text-color1);
     .dw-top{
         display: flex;
         flex-direction: row;
-        color: var(--text-color1);
         border-bottom: 1px solid var(--background-color2);
         padding-bottom: 10px;
         .dw-close{
@@ -147,7 +148,6 @@ header{
             /*height: 100%;
             width: 100%;*/
             padding: 6px 0 6px 20px;
-            color: var(--text-color1);
             font-family: 'Kaushan Script', cursive;
         }
     }
@@ -184,6 +184,137 @@ header{
         width: 2.4rem;
         i {
             font-size: 1.4rem;
+        }
+    }
+}
+
+.login-modal{
+    display: flex;
+    flex-direction: column;
+    transition: opacity 0.3s ease;
+    z-index: 509;
+    position: absolute;
+    top: 12%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    background-color: var(--background-color2);
+    box-shadow: 0px 0px 16px 4px var(--background-color-boxshadow1);
+    width: 260px;
+    border-radius: 10px;
+    font-family: 'Itim', cursive;
+    overflow: hidden;
+    color: var(--text-color1);
+    .lm-header{
+        border-bottom: 2px solid var(--background-color-hover4);
+        display: flex;
+        flex-direction: row;
+        .lm-title{
+            display: flex;
+            align-items: center;
+            padding-left: 20px;
+            font-size: 1.3rem;
+            flex-grow: 1;
+        }
+        .lm-close{
+            flex-shrink: 0;
+            cursor: pointer;
+            padding: 6px 12px;
+            font-size: 1.8rem;
+            text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+        }
+    }
+    .lm-primary{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 20px;
+        .lm-textbox{
+            width: 100%;
+            margin-bottom: 14px;
+            background-color: var(--background-color1);
+            color: var(--text-color1);
+            padding: 6px;
+            border-radius: 4px;
+            border: none;
+            outline: none;
+        }
+        .lm-submit{
+            width: 50%;
+            margin-top: 2px;
+            border: none;
+            outline: none;
+            background-color: #4f5192;
+            color: #fff;
+            border-radius: 8px;
+            padding: 4px;
+            transition: 0.2s ease;
+            &:hover{
+                background-color: #5a5b95;
+            }
+        }
+    }
+    .lm-loginwith{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 10px 20px;
+        > div{
+            cursor: pointer;
+            padding: 6px 16px;
+            border-radius: 6px;
+            transition: 0.2s ease;
+            > i{
+                font-size: 1.2rem;
+                margin: 0 auto;
+            }
+        }
+        .facebook{
+            background-color: #284878;
+            &:hover{
+                background-color: #3e5b86;
+            }
+        }
+        .twitter{
+            background-color: #4c7ac0;
+            &:hover{
+                background-color: #769ad2;
+            }
+        }
+        .google{
+            background-color: #a23535;
+            &:hover{
+                background-color: #b25252;
+            }
+        }
+    }
+    .lm-forgot{
+        text-align: center;
+        font-size: 1.2rem;
+        padding: 4px 10px;
+    }
+    .lm-rememberme{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 6px 14px 10px;
+        > label{
+            display: flex;
+            flex-direction: row;
+            > span{
+                padding-right: 6px;
+            }
+            > input{
+                width: 1rem;
+            }
+        }
+    }
+    a{
+        color: #628ad8;
+        display: unset;
+        &:hover{
+            text-decoration: underline;
         }
     }
 }
