login javascript actions

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
 <body class="darkmode">
     <div class="click-outside"></div>
     <div class="f-modaldarkness"></div>
-    <form class="login-modal">
+    <form class="login-modal" id="login-modal">
         <div class="lm-header">
             <span class="lm-title">Login</span>
-            <div class="lm-close">
+            <div class="lm-closebtn">
                 <i class="bi bi-x-lg"></i>
             </div>
         </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="dw-list">
             <ul>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Login</a></li>
+                <li><a class="login-openbtn"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Login</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person-plus"></i></div>Register</a></li>
                 <!--<li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-journals"></i></div>Library</a></li>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="account-dropdown">
                         <ul>
-                            <li><a href="#">Login</a></li>
+                            <li><a class="login-openbtn">Login</a></li>
                             <li><a href="#">Register</a></li>
                             <!--<li><a href="#">Profile</a></li>
                             <li><a href="#">Library</a></li>
