--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -229,6 +229,7 @@ header .header-wrap {
   color: var(--text-color1) !important;
   transition: 0.2s ease;
   display: flex;
+  cursor: pointer;
 }
 .drawer .dw-list > ul > li > a:hover {
   background-color: var(--background-color2);
@@ -254,7 +255,8 @@ header .header-wrap {
 }
 
 .login-modal {
-  display: flex;
+  display: none;
+  opacity: 0;
   flex-direction: column;
   transition: opacity 0.3s ease;
   z-index: 509;
@@ -284,7 +286,7 @@ header .header-wrap {
   font-size: 1.3rem;
   flex-grow: 1;
 }
-.login-modal .lm-header .lm-close {
+.login-modal .lm-header .lm-closebtn {
   flex-shrink: 0;
   cursor: pointer;
   padding: 6px 12px;
@@ -542,6 +544,7 @@ header .header-wrap {
   text-align: center;
   color: var(--text-color1) !important;
   transition: 0.2s ease;
+  cursor: pointer;
 }
 .account-cont .account-dropdown > ul > li > a:hover {
   background-color: var(--background-color-hover1);
