--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -161,6 +161,7 @@ header{
                     color: var(--text-color1) !important;
                     transition: 0.2s ease;
                     display: flex;
+                    cursor: pointer;
                     &:hover{
                         background-color: var(--background-color2);
                     }
@@ -189,7 +190,8 @@ header{
 }
 
 .login-modal{
-    display: flex;
+    display: none; //flex
+    opacity: 0;
     flex-direction: column;
     transition: opacity 0.3s ease;
     z-index: 509;
@@ -217,7 +219,7 @@ header{
             font-size: 1.3rem;
             flex-grow: 1;
         }
-        .lm-close{
+        .lm-closebtn{
             flex-shrink: 0;
             cursor: pointer;
             padding: 6px 12px;
@@ -471,6 +473,7 @@ header{
                     text-align: center;
                     color: var(--text-color1) !important;
                     transition: 0.2s ease;
+                    cursor: pointer;
                     &:hover{
                         background-color: var(--background-color-hover1);
                     }
