--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -52,6 +52,32 @@
             <a href="#">Sign Up</a>
         </div>
     </form>
+    <!--<form class="register-modal" id="register-modal">
+        <div class="rm-header">
+            <span class="rm-title">Register</span>
+            <div class="rm-closebtn">
+                <i class="bi bi-x-lg"></i>
+            </div>
+        </div>
+        <div class="rm-primary">
+            <input type="text" placeholder="Username" name="username" class="rm-textbox">
+            <input type="text" placeholder="Email" name="email" class="rm-textbox">
+            <input type="password" placeholder="Password" name="password" class="rm-textbox">
+            <input type="password" placeholder="Confirm Password" class="rm-textbox">
+            <input type="submit" value="Register" class="rm-submit">
+        </div>
+        <div class="rm-registerwith">
+            <div class="facebook">
+                <i class="bi bi-facebook"></i>
+            </div>
+            <div class="twitter">
+                <i class="bi bi-twitter"></i>
+            </div>
+            <div class="google">
+                <i class="bi bi-google"></i>
+            </div>
+        </div>
+    </form>-->
     <div class="drawer">
         <div class="dw-top">
             <div class="dw-account">
