--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                     <i class="bi bi-search search-shortcut"></i>
                     <i class="bi bi-chat-dots chat-shortcut"></i>
                     <i class="bi bi-plus-circle"></i>
-                    <i class="bi bi-bell"></i>
+                    <i class="bi bi-bell notifications-shortcut"></i>
                 </div>
                 <div class="account-cont">
                     <div class="ppic-wrap">
