--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -237,7 +237,7 @@ header{
             margin-bottom: 14px;
             background-color: var(--background-color1);
             color: var(--text-color1);
-            padding: 6px;
+            padding: 6px 10px;
             border-radius: 4px;
             border: none;
             outline: none;
@@ -270,6 +270,7 @@ header{
             > i{
                 font-size: 1.2rem;
                 margin: 0 auto;
+                color: #fff;
             }
         }
         .facebook{
@@ -580,7 +581,12 @@ header{
     }
 }
 
-// Max widths
+// custom max widths
+@media (max-width: 240px) {
+    .notifications-shortcut{
+        display: none;
+    }
+}
 @media (max-width: 767.98px) {
     .main-cont{
         padding: 0;
