register small design fix

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
         <div class="dw-list">
             <ul>
                 <li><a class="login-openbtn"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Login</a></li>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person-plus"></i></div>Register</a></li>
+                <li><a asp-controller="Home" asp-action="Register"><div class="dw-icon-cont"><i class="bi bi-person-plus"></i></div>Register</a></li>
                 <!--<li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-journals"></i></div>Library</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
@@ -142,7 +142,7 @@
                     <div class="account-dropdown">
                         <ul>
                             <li><a class="login-openbtn">Login</a></li>
-                            <li><a href="#">Register</a></li>
+                            <li><a asp-controller="Home" asp-action="Register">Register</a></li>
                             <!--<li><a href="#">Profile</a></li>
                             <li><a href="#">Library</a></li>
                             <li><a href="#">Friends</a></li>
