register design change

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         </div>
         <div class="lm-rememberme">
             <label><span>Remember me</span><input type="checkbox" name="rememberme"></label>
-            <a href="#">Sign Up</a>
+            <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
     <!--<form class="register-modal" id="register-modal">
