--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -24,6 +24,9 @@
     --navlink-readingtime-color-hover: #607d7d;
     --navlink-aboutyou-color: #473c3c;
     --navlink-aboutyou-color-hover: #6c5959;
+        //register
+    --register-form-color: #404040;
+    --register-input-color: #1d1d1d;
     //----------
 
     --searchplaceholder-color: #939393;
@@ -53,6 +56,9 @@
     --navlink-readingtime-color-hover: #777ea8;
     --navlink-aboutyou-color: #a08888;
     --navlink-aboutyou-color-hover: #8d6767;
+        //register
+    --register-form-color: #f0f0f0;
+    --register-input-color: #dcdcdc;
     //----------
 
     //#bda952
