--- a/OmneFictio.Web/wwwroot/css/register.scss
+++ b/OmneFictio.Web/wwwroot/css/register.scss
@@ -5,6 +5,9 @@
     width: 100%;
     color: var(--text-color1);
     font-family: 'Itim', cursive;
+    margin-top: 20px;
+    border-radius: 10px;
+    background: var(--register-form-color);
     .register-main{
         display: flex;
         flex-direction: column;
@@ -26,7 +29,7 @@
             .rm-textbox{
                 width: 100%;
                 margin-bottom: 14px;
-                background-color: var(--background-color2);
+                background-color: var(--register-input-color);
                 color: var(--text-color1);
                 padding: 6px 10px;
                 border-radius: 4px;
@@ -117,7 +120,7 @@
                 }
             }
             > select{
-                background-color: var(--background-color2);
+                background-color: var(--register-input-color);
                 color: var(--text-color1);
                 border-radius: 4px;
                 border: none;
@@ -139,10 +142,8 @@
 @media (min-width: 768px) {
     .register{
         flex-direction: row;
+        padding: 20px 0;
         .register-main {
-            .rm-primary .rm-textbox{
-                background-color: var(--background-color1);
-            }
             .rm-registerwith {
                 padding-top: 14px;
                 > div > i {
@@ -156,9 +157,6 @@
         .register-extra{
             .re-header{
                 text-align: left;
-            }
-            .re-primary > select {
-                background-color: var(--background-color1);
             }
         }
     }
