--- a/OmneFictio.Web/wwwroot/css/register.scss
+++ b/OmneFictio.Web/wwwroot/css/register.scss
@@ -83,6 +83,18 @@
                 &:hover{
                     background-color: #b25252;
                 }
+                position: relative;
+                > div{
+                    position: absolute;
+                    left:0;
+                    top:0;
+                    width: 100% !important;
+                    height: 100% !important;
+                    opacity: 0;
+                    *{
+                        display: none;
+                    }
+                }
             }
         }
     }
