--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -644,16 +644,21 @@ header .header-wrap {
     max-width: 550px !important;
   }
 }
-@media (max-width: 240px) {
-  .notifications-shortcut {
-    display: none;
-  }
-}
 @media (max-width: 767.98px) {
   .main-cont {
     padding: 0;
     margin: 0;
     max-width: unset;
     width: 100%;
+  }
+}
+@media (max-width: 240px) {
+  .notifications-shortcut {
+    display: none;
+  }
+}
+@media (max-width: 210px) {
+  .chat-shortcut {
+    display: none;
   }
 }/*# sourceMappingURL=site.css.map */
