--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-signin-client_id" content="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com" />
-    
+
     
     <title>@ViewData["Title"] - OmneFictio</title>
     
@@ -43,7 +43,7 @@
             <div class="twitter">
                 <i class="bi bi-twitter"></i>
             </div>
-            <div class="google">
+            <div class="google g-signin2" data-onsuccess="googleOnSignIn" data-onfailure="googleOnFailure">
                 <i class="bi bi-google"></i>
             </div>
         </div>
@@ -168,7 +168,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=googleRenderButton" async defer></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     @await RenderSectionAsync("Scripts", required: false)
     <!--RenderSection("Scripts", required: false)-->
 </body>
