--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -594,16 +594,21 @@ header{
 }
 
 // custom max widths
-@media (max-width: 240px) {
-    .notifications-shortcut{
-        display: none;
-    }
-}
 @media (max-width: 767.98px) {
     .main-cont{
         padding: 0;
         margin: 0;
         max-width: unset;
         width: 100%;
+    }
+}
+@media (max-width: 240px) {
+    .notifications-shortcut{
+        display: none;
+    }
+}
+@media (max-width: 210px) {
+    .chat-shortcut{
+        display: none;
     }
 }
