google identity sign in 1

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-signin-client_id" content="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com" />
-
+    <!--<meta name="google-signin-client_id" content="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com" />
+    -->
     
     <title>@ViewData["Title"] - OmneFictio</title>
     
@@ -22,6 +22,12 @@
     @RenderSection("Stylesheets", required: false)
 </head>
 <body class="darkmode">
+    
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div id="g_id_onload"
+         data-client_id="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com"
+         data-callback="handleCredentialResponse">
+    </div>
     <div class="click-outside"></div>
     <div class="f-modaldarkness"></div>
     <form asp-controller="Home" asp-action="UserLogin" method="post" class="login-modal" id="login-modal">
@@ -43,9 +49,8 @@
             <div class="twitter">
                 <i class="bi bi-twitter"></i>
             </div>
-            <div class="google g-signin2" data-onsuccess="googleOnSignIn" data-onfailure="googleOnFailure">
-                <i class="bi bi-google"></i>
-            </div>
+            <div class="google g_id_signin" data-type="standard"></div>
+            <!--<i class="bi bi-google"></i>-->
         </div>
         <div class="lm-forgot">
             <span>I forgot <a href="#">something</a></span>
@@ -168,7 +173,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     @await RenderSectionAsync("Scripts", required: false)
     <!--RenderSection("Scripts", required: false)-->
 </body>
