--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -26,9 +26,8 @@
             <div class="twitter">
                 <i class="bi bi-twitter"></i>
             </div>
-            <div class="google g-signin2" data-onsuccess="onSigninGoogle">
-                <i class="bi bi-google"></i>
-            </div>
+            <div class="google g_id_signin" data-type="standard"></div>
+            <!--<i class="bi bi-google"></i>-->
         </div>
     </div>
     <div class="register-extra">
