--- a/OmneFictio.Web/wwwroot/css/register.css
+++ b/OmneFictio.Web/wwwroot/css/register.css
@@ -88,15 +88,12 @@
   background-color: #b25252;
 }
 .register .register-main .rm-registerwith .google > div {
-  position: absolute;
+  position: absolute !important;
   left: 0;
   top: 0;
   width: 100% !important;
   height: 100% !important;
   opacity: 0;
-}
-.register .register-main .rm-registerwith .google > div * {
-  display: none;
 }
 .register .register-extra {
   display: flex;
