--- a/OmneFictio.Web/wwwroot/css/register.scss
+++ b/OmneFictio.Web/wwwroot/css/register.scss
@@ -85,15 +85,12 @@
                 }
                 position: relative;
                 > div{
-                    position: absolute;
+                    position: absolute !important;
                     left:0;
                     top:0;
                     width: 100% !important;
                     height: 100% !important;
                     opacity: 0;
-                    *{
-                        display: none;
-                    }
                 }
             }
         }
