--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -364,15 +364,12 @@ header .header-wrap {
   background-color: #b25252;
 }
 .login-modal .lm-loginwith .google > div {
-  position: absolute;
+  position: absolute !important;
   left: 0;
   top: 0;
   width: 100% !important;
   height: 100% !important;
   opacity: 0;
-}
-.login-modal .lm-loginwith .google > div * {
-  display: none;
 }
 .login-modal .lm-forgot {
   text-align: center;
