google signup 3 (create user)

--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -7,7 +7,7 @@
         <script src="~/js/register.js" asp-append-version="true" ></script>
     }
 }
-<form asp-controller="Home" asp-action="UserRegistration" method="post" class="register">
+<form asp-controller="Auth" asp-action="UserRegistration" method="post" class="register">
     <div class="register-main">
         <div class="rm-header">
             <span>Register</span>
