--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
     <div class="g_id_signin" data-type="standard"></div>
     <div class="click-outside"></div>
     <div class="f-modaldarkness"></div>
-    <form asp-controller="Home" asp-action="UserLogin" method="post" class="login-modal" id="login-modal">
+    <form asp-controller="Auth" asp-action="UserLogin" method="post" class="login-modal" id="login-modal">
         <div class="lm-header">
             <span class="lm-title">Login</span>
             <div class="lm-closebtn">
